--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+/* code by helpmecoder */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 350vh;
-  background: #fff;
+  min-height: 100vh;
+  background: #000;
 }
-
 .wrapper:hover {
   position: relative;
   width: 400px;
-  height: 550px; /* Adjusted height for sign-up page */
-  background: #fff;
+  height: 500px;
+  background: #000;
   box-shadow: 0 0 50px rgb(251, 184, 13);
   border-radius: 20px;
   padding: 40px;
@@ -32,51 +31,43 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 200vh;
+  height: 100%;
   transition: 1s ease-in-out;
 }
-
 .wrapper.active .form-wrapper.sign-in {
   transform: translateY(-450px);
 }
-
 .wrapper .form-wrapper.sign-up {
   overflow: hidden;
   position: absolute;
   top: 450px;
   left: 0;
-  height: 100vh;
 }
-
 .wrapper.active .form-wrapper.sign-up {
-  transform: translateY(-500px); /* Adjusted transform for sign-up page */
+  transform: translateY(-450px);
 }
-
 h2 {
   font-size: 30px;
   color: #fff;
   text-align: center;
 }
-
 .input-group {
   position: relative;
   margin: 30px 0;
+  border-bottom: 2px solid #fff;
 }
-
 .input-group label {
   position: absolute;
   top: 50%;
   left: 5px;
   transform: translateY(-50%);
-  font-size: 12px;
+  font-size: 16px;
   color: #fff;
   pointer-events: none;
   transition: .5s;
 }
-
-.input-group input,
-.input-group select {
-  width: 100%;
+.input-group input {
+  width: 320px;
   height: 40px;
   font-size: 16px;
   color: #fff;
@@ -84,29 +75,21 @@ h2 {
   background: transparent;
   border: none;
   outline: none;
-  border-bottom: 2px solid #fff;
 }
-
 .input-group input:focus~label,
-.input-group input:valid~label,
-.input-group select:focus~label,
-.input-group select:valid~label {
+.input-group input:valid~label {
   top: -5px;
 }
-
 .remember {
   margin: -5px 0 15px 5px;
 }
-
 .remember label {
   color: #fff;
   font-size: 14px;
 }
-
 .remember label input {
   accent-color: rgb(251, 184, 13);
 }
-
 button {
   position: relative;
   width: 100%;
@@ -121,23 +104,19 @@ button {
   border: none;
   outline: none;
 }
-
 .signUp-link {
   font-size: 14px;
   text-align: center;
   margin: 15px 0;
 }
-
 .signUp-link p {
   color: #fff;
 }
-
 .signUp-link p a {
   color: rgb(251, 184, 13);
   text-decoration: none;
   font-weight: 500;
 }
-
 .signUp-link p a:hover {
   text-decoration: underline;
 }
